@@ -51,6 +51,23 @@ test event-1.2 {event generate <Alt-z>} {
 	destroy .e
 	set ::event12result
 } 1
+
+test event-button-state-1.1 { button press in a window that is then
+        destroyed, when the mouse is moved into another window it
+        should not generate a <B1-motion> event since the mouse
+        was not pressed down in that window. } {
+    destroy .t
+    set t [toplevel .t]
+
+    event generate $t <ButtonPress-1>
+    destroy $t
+    set t [toplevel .t]
+    set motion nomotion
+    bind $t <B1-Motion> {set motion inmotion}
+    event generate $t <Motion>
+    set motion
+} nomotion
+
 # cleanup
 ::tcltest::cleanupTests
 return
